@@ -8,27 +8,41 @@
 
 package org.opensearch.index.engine.dataformat.merge;
 
+import org.opensearch.common.SuppressForbidden;
 import org.opensearch.common.concurrent.GatedCloseable;
 import org.opensearch.common.settings.Settings;
 import org.opensearch.core.index.shard.ShardId;
 import org.opensearch.index.IndexSettings;
 import org.opensearch.index.MergeSchedulerConfig;
-import org.opensearch.index.engine.dataformat.DataFormat;
 import org.opensearch.index.engine.dataformat.MergeResult;
+import org.opensearch.index.engine.dataformat.Merger;
 import org.opensearch.index.engine.dataformat.stub.MockDataFormat;
-import org.opensearch.index.engine.exec.Indexer;
 import org.opensearch.index.engine.exec.Segment;
 import org.opensearch.index.engine.exec.WriterFileSet;
 import org.opensearch.index.engine.exec.coord.CatalogSnapshot;
 import org.opensearch.test.OpenSearchTestCase;
+import org.opensearch.threadpool.ThreadPool;
 
+import java.io.IOException;
+import java.lang.reflect.Field;
 import java.nio.file.Path;
+import java.util.ArrayList;
 import java.util.Collection;
 import java.util.Collections;
 import java.util.List;
+import java.util.Map;
 import java.util.Set;
+import java.util.concurrent.CopyOnWriteArrayList;
+import java.util.concurrent.CountDownLatch;
+import java.util.concurrent.ExecutorService;
+import java.util.concurrent.Executors;
+import java.util.concurrent.TimeUnit;
+import java.util.concurrent.atomic.AtomicBoolean;
+import java.util.concurrent.atomic.AtomicReference;
+import java.util.function.Supplier;
 
 import static org.opensearch.index.IndexSettingsTests.newIndexMeta;
+import static org.mockito.ArgumentMatchers.eq;
 import static org.mockito.Mockito.mock;
 import static org.mockito.Mockito.when;
 
@@ -37,34 +51,94 @@ import static org.mockito.Mockito.when;
  */
 public class MergeTests extends OpenSearchTestCase {
 
-    // ---- Helpers ----
+    private static final ShardId SHARD_ID = new ShardId("test", "_na_", 0);
 
-    private static class TestMergeHandler extends MergeHandler {
-        private final List<OneMerge> merges;
+    private final List<ExecutorService> executors = new CopyOnWriteArrayList<>();
 
-        TestMergeHandler(Indexer indexer, ShardId shardId, List<OneMerge> merges) {
-            super(indexer, shardId);
-            this.merges = merges;
+    private ExecutorService daemonPool() {
+        ExecutorService pool = Executors.newCachedThreadPool(r -> {
+            Thread t = new Thread(r);
+            t.setDaemon(true);
+            return t;
+        });
+        executors.add(pool);
+        return pool;
+    }
+
+    private ThreadPool mockThreadPool() {
+        ThreadPool tp = mock(ThreadPool.class);
+        when(tp.executor(eq(ThreadPool.Names.MERGE))).thenReturn(daemonPool());
+        when(tp.executor(eq(ThreadPool.Names.FORCE_MERGE))).thenReturn(daemonPool());
+        return tp;
+    }
+
+    @Override
+    public void tearDown() throws Exception {
+        for (ExecutorService pool : executors) {
+            pool.shutdownNow();
+            pool.awaitTermination(5, TimeUnit.SECONDS);
         }
+        executors.clear();
+        super.tearDown();
+    }
 
-        TestMergeHandler(Indexer indexer, ShardId shardId) {
-            this(indexer, shardId, Collections.emptyList());
+    private static final MergeHandler.MergePolicy NOOP_MERGE_POLICY = new MergeHandler.MergePolicy() {
+        @Override
+        public List<List<Segment>> findMergeCandidates(List<Segment> segments) {
+            return List.of();
         }
 
         @Override
-        public Collection<OneMerge> findMerges() {
-            return merges;
+        public List<List<Segment>> findForceMergeCandidates(List<Segment> segments, int maxSegmentCount) {
+            return List.of();
         }
+    };
+
+    private static final MergeHandler.MergeListener NOOP_MERGE_LISTENER = new MergeHandler.MergeListener() {
+        @Override
+        public void addMergingSegment(Collection<Segment> mergingSegments) {}
 
         @Override
-        public Collection<OneMerge> findForceMerges(int maxSegmentCount) {
-            return merges;
-        }
+        public void removeMergingSegment(Collection<Segment> mergingSegments) {}
+    };
 
-        @Override
-        public MergeResult doMerge(OneMerge oneMerge) {
-            return null;
+    private MergeHandler createNoopHandler(Supplier<GatedCloseable<CatalogSnapshot>> snapshotSupplier) {
+        Merger noopMerger = mergeInput -> new MergeResult(Map.of());
+        return new MergeHandler(snapshotSupplier, noopMerger, SHARD_ID, NOOP_MERGE_POLICY, NOOP_MERGE_LISTENER);
+    }
+
+    private MergeHandler createHandlerWithRealPolicy(Supplier<GatedCloseable<CatalogSnapshot>> snapshotSupplier, Merger merger) {
+        DataFormatAwareMergePolicy policy = new DataFormatAwareMergePolicy(
+            new IndexSettings(newIndexMeta("test", Settings.EMPTY), Settings.EMPTY).getMergePolicy(true),
+            SHARD_ID
+        );
+        return new MergeHandler(snapshotSupplier, merger, SHARD_ID, policy, policy);
+    }
+
+    private static Supplier<GatedCloseable<CatalogSnapshot>> snapshotSupplierOf(List<Segment> segments) {
+        CatalogSnapshot snap = mock(CatalogSnapshot.class);
+        when(snap.getSegments()).thenReturn(segments);
+        return () -> new GatedCloseable<>(snap, () -> {});
+    }
+
+    private static Supplier<GatedCloseable<CatalogSnapshot>> emptySnapshotSupplier() {
+        return snapshotSupplierOf(Collections.emptyList());
+    }
+
+    private static List<Segment> createSegments(int count) {
+        List<Segment> segments = new ArrayList<>();
+        for (int i = 1; i <= count; i++) {
+            segments.add(Segment.builder(i).build());
         }
+        return segments;
+    }
+
+    private static IndexSettings mergeSchedulerSettings() {
+        Settings settings = Settings.builder()
+            .put(MergeSchedulerConfig.MAX_THREAD_COUNT_SETTING.getKey(), "1")
+            .put(MergeSchedulerConfig.MAX_MERGE_COUNT_SETTING.getKey(), "6")
+            .build();
+        return new IndexSettings(newIndexMeta("test", settings), Settings.EMPTY);
     }
 
     private MergeScheduler createMergeScheduler() {
@@ -73,8 +147,13 @@ public class MergeTests extends OpenSearchTestCase {
             .put(MergeSchedulerConfig.MAX_MERGE_COUNT_SETTING.getKey(), "6")
             .build();
         IndexSettings idxSettings = new IndexSettings(newIndexMeta("test", settings), Settings.EMPTY);
-        ShardId shardId = new ShardId("test", "_na_", 0);
-        return new MergeScheduler(new TestMergeHandler(mock(Indexer.class), shardId), shardId, idxSettings);
+        return new MergeScheduler(
+            createNoopHandler(emptySnapshotSupplier()),
+            (mergeResult, oneMerge) -> {},
+            SHARD_ID,
+            idxSettings,
+            mockThreadPool()
+        );
     }
 
     // ---- OneMerge tests ----
@@ -88,7 +167,7 @@ public class MergeTests extends OpenSearchTestCase {
 
     public void testOneMergeAggregatesDocCounts() {
         Path dir = createTempDir();
-        DataFormat format = new MockDataFormat();
+        MockDataFormat format = new MockDataFormat();
         WriterFileSet fs1 = new WriterFileSet(dir.toString(), 1L, Set.of(), 10);
         WriterFileSet fs2 = new WriterFileSet(dir.toString(), 2L, Set.of(), 20);
 
@@ -114,41 +193,16 @@ public class MergeTests extends OpenSearchTestCase {
     // ---- MergeHandler tests ----
 
     public void testMergeHandlerInitiallyEmpty() {
-        MergeHandler handler = new TestMergeHandler(mock(Indexer.class), new ShardId("test", "_na_", 0));
+        MergeHandler handler = createNoopHandler(() -> new GatedCloseable<>(null, () -> {}));
         assertFalse(handler.hasPendingMerges());
         assertNull(handler.getNextMerge());
     }
 
-    public void testMergeHandlerFindMerges() {
-        OneMerge merge = new OneMerge(List.of(Segment.builder(1L).build()));
-        TestMergeHandler handler = new TestMergeHandler(mock(Indexer.class), new ShardId("test", "_na_", 0), List.of(merge));
-        Collection<OneMerge> found = handler.findMerges();
-        assertEquals(1, found.size());
-        assertSame(merge, found.iterator().next());
-    }
-
-    public void testMergeHandlerFindForceMerges() {
-        OneMerge merge = new OneMerge(List.of(Segment.builder(1L).build()));
-        TestMergeHandler handler = new TestMergeHandler(mock(Indexer.class), new ShardId("test", "_na_", 0), List.of(merge));
-        assertEquals(1, handler.findForceMerges(1).size());
-    }
-
-    public void testMergeHandlerDoMergeReturnsNull() {
-        assertNull(
-            new TestMergeHandler(mock(Indexer.class), new ShardId("test", "_na_", 0)).doMerge(new OneMerge(Collections.emptyList()))
-        );
-    }
-
     public void testMergeHandlerLifecycleCallbacks() {
-        Indexer mockIndexer = mock(Indexer.class);
-        CatalogSnapshot mockSnapshot = mock(CatalogSnapshot.class);
-        when(mockSnapshot.getSegments()).thenReturn(Collections.emptyList());
-        when(mockIndexer.acquireSnapshot()).thenReturn(new GatedCloseable<>(mockSnapshot, () -> {}));
-
-        MergeHandler handler = new TestMergeHandler(mockIndexer, new ShardId("test", "_na_", 0));
+        MergeHandler handler = createNoopHandler(emptySnapshotSupplier());
         OneMerge merge = new OneMerge(Collections.emptyList());
         handler.registerMerge(merge);
-        handler.updatePendingMerges();
+        handler.findAndRegisterMerges();
         handler.onMergeFinished(merge);
         handler.onMergeFailure(merge);
     }
@@ -157,12 +211,7 @@ public class MergeTests extends OpenSearchTestCase {
         Segment seg1 = Segment.builder(1L).build();
         Segment seg2 = Segment.builder(2L).build();
 
-        Indexer mockIndexer = mock(Indexer.class);
-        CatalogSnapshot mockSnapshot = mock(CatalogSnapshot.class);
-        when(mockSnapshot.getSegments()).thenReturn(List.of(seg1, seg2));
-        when(mockIndexer.acquireSnapshot()).thenReturn(new GatedCloseable<>(mockSnapshot, () -> {}));
-
-        MergeHandler handler = new TestMergeHandler(mockIndexer, new ShardId("test", "_na_", 0));
+        MergeHandler handler = createNoopHandler(snapshotSupplierOf(List.of(seg1, seg2)));
         OneMerge merge = new OneMerge(List.of(seg1, seg2));
         handler.registerMerge(merge);
 
@@ -175,117 +224,42 @@ public class MergeTests extends OpenSearchTestCase {
         Segment catalogSeg = Segment.builder(1L).build();
         Segment unknownSeg = Segment.builder(99L).build();
 
-        Indexer mockIndexer = mock(Indexer.class);
-        CatalogSnapshot mockSnapshot = mock(CatalogSnapshot.class);
-        when(mockSnapshot.getSegments()).thenReturn(List.of(catalogSeg));
-        when(mockIndexer.acquireSnapshot()).thenReturn(new GatedCloseable<>(mockSnapshot, () -> {}));
-
-        MergeHandler handler = new TestMergeHandler(mockIndexer, new ShardId("test", "_na_", 0));
+        MergeHandler handler = createNoopHandler(snapshotSupplierOf(List.of(catalogSeg)));
         handler.registerMerge(new OneMerge(List.of(unknownSeg)));
 
         assertFalse(handler.hasPendingMerges());
     }
 
     public void testRegisterMergeThrowsOnAcquireSnapshotFailure() {
-        Indexer mockIndexer = mock(Indexer.class);
-        when(mockIndexer.acquireSnapshot()).thenThrow(new RuntimeException("snapshot unavailable"));
+        Supplier<GatedCloseable<CatalogSnapshot>> failingSupplier = () -> { throw new RuntimeException("snapshot unavailable"); };
 
-        MergeHandler handler = new TestMergeHandler(mockIndexer, new ShardId("test", "_na_", 0));
+        MergeHandler handler = createNoopHandler(failingSupplier);
         expectThrows(RuntimeException.class, () -> handler.registerMerge(new OneMerge(Collections.emptyList())));
         assertFalse(handler.hasPendingMerges());
     }
 
-    public void testUpdatePendingMergesSkipsAlreadyMergingSegments() {
-        Segment seg = Segment.builder(1L).build();
-
-        Indexer mockIndexer = mock(Indexer.class);
-        CatalogSnapshot mockSnapshot = mock(CatalogSnapshot.class);
-        when(mockSnapshot.getSegments()).thenReturn(List.of(seg));
-        when(mockIndexer.acquireSnapshot()).thenReturn(new GatedCloseable<>(mockSnapshot, () -> {}));
-
-        OneMerge merge = new OneMerge(List.of(seg));
-        // Handler whose findMerges returns a merge containing seg
-        MergeHandler handler = new TestMergeHandler(mockIndexer, new ShardId("test", "_na_", 0), List.of(merge));
-
-        // Register the merge directly so seg is in currentlyMergingSegments
-        handler.registerMerge(merge);
-        assertTrue(handler.hasPendingMerges());
-
-        // Now updatePendingMerges calls findMerges which returns the same merge,
-        // but seg is already in currentlyMergingSegments so isValidMerge=false, skip
-        when(mockIndexer.acquireSnapshot()).thenReturn(new GatedCloseable<>(mockSnapshot, () -> {}));
-        handler.updatePendingMerges();
-
-        // Should still have only the original merge, no duplicate
-        assertNotNull(handler.getNextMerge());
-        assertNull(handler.getNextMerge());
-    }
-
-    public void testUpdatePendingMergesWithEmptySegmentsMerge() {
-        Indexer mockIndexer = mock(Indexer.class);
-        CatalogSnapshot mockSnapshot = mock(CatalogSnapshot.class);
-        when(mockSnapshot.getSegments()).thenReturn(Collections.emptyList());
-        when(mockIndexer.acquireSnapshot()).thenReturn(new GatedCloseable<>(mockSnapshot, () -> {}));
-
-        // findMerges returns a merge with empty segments list — inner for loop doesn't iterate,
-        // isValidMerge stays true, registerMerge is called
-        OneMerge emptyMerge = new OneMerge(Collections.emptyList());
-        MergeHandler handler = new TestMergeHandler(mockIndexer, new ShardId("test", "_na_", 0), List.of(emptyMerge));
-
-        handler.updatePendingMerges();
-        assertTrue(handler.hasPendingMerges());
-    }
-
-    public void testUpdatePendingMergesWithNoMergesFound() {
-        Indexer mockIndexer = mock(Indexer.class);
-        // findMerges returns empty — outer for loop doesn't iterate
-        MergeHandler handler = new TestMergeHandler(mockIndexer, new ShardId("test", "_na_", 0), Collections.emptyList());
-
-        handler.updatePendingMerges();
-        assertFalse(handler.hasPendingMerges());
-    }
-
     public void testRegisterMergeWithEmptySegmentsList() {
-        Indexer mockIndexer = mock(Indexer.class);
-        CatalogSnapshot mockSnapshot = mock(CatalogSnapshot.class);
-        when(mockSnapshot.getSegments()).thenReturn(Collections.emptyList());
-        when(mockIndexer.acquireSnapshot()).thenReturn(new GatedCloseable<>(mockSnapshot, () -> {}));
-
-        MergeHandler handler = new TestMergeHandler(mockIndexer, new ShardId("test", "_na_", 0));
-        // Empty segments list — for loop in registerMerge doesn't iterate, merge is registered
+        MergeHandler handler = createNoopHandler(emptySnapshotSupplier());
         handler.registerMerge(new OneMerge(Collections.emptyList()));
         assertTrue(handler.hasPendingMerges());
     }
 
-    public void testOnMergeFinishedRemovesSegmentsAndUpdates() {
+    public void testOnMergeFinishedRemovesSegments() {
         Segment seg = Segment.builder(1L).build();
 
-        Indexer mockIndexer = mock(Indexer.class);
-        CatalogSnapshot mockSnapshot = mock(CatalogSnapshot.class);
-        when(mockSnapshot.getSegments()).thenReturn(List.of(seg));
-        when(mockIndexer.acquireSnapshot()).thenReturn(new GatedCloseable<>(mockSnapshot, () -> {}));
-
-        MergeHandler handler = new TestMergeHandler(mockIndexer, new ShardId("test", "_na_", 0));
+        MergeHandler handler = createNoopHandler(snapshotSupplierOf(List.of(seg)));
         OneMerge merge = new OneMerge(List.of(seg));
         handler.registerMerge(merge);
         assertTrue(handler.hasPendingMerges());
 
-        when(mockIndexer.acquireSnapshot()).thenReturn(new GatedCloseable<>(mockSnapshot, () -> {}));
         handler.onMergeFinished(merge);
-        // After onMergeFinished, the merge is removed; updatePendingMerges is called
-        // but findMerges returns empty list for this handler, so nothing new is added
         assertFalse(handler.hasPendingMerges());
     }
 
     public void testOnMergeFailureRemovesSegments() {
         Segment seg = Segment.builder(1L).build();
 
-        Indexer mockIndexer = mock(Indexer.class);
-        CatalogSnapshot mockSnapshot = mock(CatalogSnapshot.class);
-        when(mockSnapshot.getSegments()).thenReturn(List.of(seg));
-        when(mockIndexer.acquireSnapshot()).thenReturn(new GatedCloseable<>(mockSnapshot, () -> {}));
-
-        MergeHandler handler = new TestMergeHandler(mockIndexer, new ShardId("test", "_na_", 0));
+        MergeHandler handler = createNoopHandler(snapshotSupplierOf(List.of(seg)));
         OneMerge merge = new OneMerge(List.of(seg));
         handler.registerMerge(merge);
         assertTrue(handler.hasPendingMerges());
@@ -298,17 +272,11 @@ public class MergeTests extends OpenSearchTestCase {
         Segment seg1 = Segment.builder(1L).build();
         Segment seg2 = Segment.builder(2L).build();
 
-        Indexer mockIndexer = mock(Indexer.class);
-        CatalogSnapshot mockSnapshot = mock(CatalogSnapshot.class);
-        when(mockSnapshot.getSegments()).thenReturn(List.of(seg1, seg2));
-        when(mockIndexer.acquireSnapshot()).thenReturn(new GatedCloseable<>(mockSnapshot, () -> {}));
-
-        MergeHandler handler = new TestMergeHandler(mockIndexer, new ShardId("test", "_na_", 0));
+        MergeHandler handler = createNoopHandler(snapshotSupplierOf(List.of(seg1, seg2)));
         OneMerge merge1 = new OneMerge(List.of(seg1));
         OneMerge merge2 = new OneMerge(List.of(seg2));
 
         handler.registerMerge(merge1);
-        when(mockIndexer.acquireSnapshot()).thenReturn(new GatedCloseable<>(mockSnapshot, () -> {}));
         handler.registerMerge(merge2);
 
         assertTrue(handler.hasPendingMerges());
@@ -321,34 +289,22 @@ public class MergeTests extends OpenSearchTestCase {
         Segment catalogSeg = Segment.builder(1L).build();
         Segment unknownSeg = Segment.builder(99L).build();
 
-        Indexer mockIndexer = mock(Indexer.class);
-        CatalogSnapshot mockSnapshot = mock(CatalogSnapshot.class);
-        when(mockSnapshot.getSegments()).thenReturn(List.of(catalogSeg));
-        when(mockIndexer.acquireSnapshot()).thenReturn(new GatedCloseable<>(mockSnapshot, () -> {}));
-
-        MergeHandler handler = new TestMergeHandler(mockIndexer, new ShardId("test", "_na_", 0));
-        // First segment is in catalog, second is not — covers the loop-continue-then-return branch
+        MergeHandler handler = createNoopHandler(snapshotSupplierOf(List.of(catalogSeg)));
         handler.registerMerge(new OneMerge(List.of(catalogSeg, unknownSeg)));
 
         assertFalse(handler.hasPendingMerges());
     }
 
-    public void testUpdatePendingMergesRegistersValidMerges() {
-        Segment seg = Segment.builder(1L).build();
+    // ---- MergeHandler doMerge tests ----
 
-        Indexer mockIndexer = mock(Indexer.class);
-        CatalogSnapshot mockSnapshot = mock(CatalogSnapshot.class);
-        when(mockSnapshot.getSegments()).thenReturn(List.of(seg));
-        when(mockIndexer.acquireSnapshot()).thenReturn(new GatedCloseable<>(mockSnapshot, () -> {}));
+    public void testDoMergeReturnsResult() throws IOException {
+        MergeResult expectedResult = new MergeResult(Map.of());
+        Merger merger = mergeInput -> expectedResult;
 
-        OneMerge merge = new OneMerge(List.of(seg));
-        // Handler whose findMerges returns a merge with a valid segment
-        MergeHandler handler = new TestMergeHandler(mockIndexer, new ShardId("test", "_na_", 0), List.of(merge));
+        MergeHandler handler = new MergeHandler(emptySnapshotSupplier(), merger, SHARD_ID, NOOP_MERGE_POLICY, NOOP_MERGE_LISTENER);
+        MergeResult result = handler.doMerge(new OneMerge(Collections.emptyList()));
 
-        handler.updatePendingMerges();
-
-        assertTrue(handler.hasPendingMerges());
-        assertSame(merge, handler.getNextMerge());
+        assertSame(expectedResult, result);
     }
 
     // ---- MergeScheduler tests ----
@@ -369,14 +325,119 @@ public class MergeTests extends OpenSearchTestCase {
 
     public void testSchedulerRefreshConfigIdempotent() {
         MergeScheduler scheduler = createMergeScheduler();
-        // Second call with same config should be a no-op (covers the early return branch)
         scheduler.refreshConfig();
         scheduler.refreshConfig();
     }
 
-    public void testSchedulerTriggerAndForceMerge() {
+    public void testSchedulerTriggerAndForceMerge() throws IOException {
         MergeScheduler scheduler = createMergeScheduler();
         scheduler.triggerMerges();
         scheduler.forceMerge(1);
+    }
+
+    @SuppressForbidden(reason = "test needs to set private isShutdown field via reflection")
+    public void testTriggerMergesAfterShutdown() throws Exception {
+        MergeScheduler scheduler = createMergeScheduler();
+        setShutdownFlag(scheduler, true);
+        scheduler.triggerMerges();
+    }
+
+    public void testTriggerMergesWithNoPendingMerges() {
+        MergeScheduler scheduler = createMergeScheduler();
+        scheduler.triggerMerges();
+        assertEquals(0, scheduler.stats().getCurrent());
+    }
+
+    public void testStatsWithAutoThrottleEnabled() {
+        Settings autoThrottleSettings = Settings.builder()
+            .put(MergeSchedulerConfig.MAX_THREAD_COUNT_SETTING.getKey(), "1")
+            .put(MergeSchedulerConfig.MAX_MERGE_COUNT_SETTING.getKey(), "6")
+            .put(MergeSchedulerConfig.AUTO_THROTTLE_SETTING.getKey(), "true")
+            .build();
+        IndexSettings idxSettings = new IndexSettings(newIndexMeta("test", autoThrottleSettings), Settings.EMPTY);
+        MergeScheduler scheduler = new MergeScheduler(
+            createNoopHandler(emptySnapshotSupplier()),
+            (mr, om) -> {},
+            SHARD_ID,
+            idxSettings,
+            mockThreadPool()
+        );
+        scheduler.enableAutoIOThrottle();
+        assertNotNull(scheduler.stats());
+    }
+
+    // ---- MergeScheduler: integration with real merge execution ----
+
+    public void testTriggerMergesExecutesMergeThread() throws Exception {
+        List<Segment> segments = createSegments(15);
+        MergeResult mergeResult = new MergeResult(Map.of());
+        CountDownLatch latch = new CountDownLatch(1);
+
+        Merger merger = mergeInput -> {
+            latch.countDown();
+            return mergeResult;
+        };
+        MergeHandler handler = createHandlerWithRealPolicy(snapshotSupplierOf(segments), merger);
+
+        AtomicReference<MergeResult> captured = new AtomicReference<>();
+        MergeScheduler scheduler = new MergeScheduler(
+            handler,
+            (mr, om) -> captured.set(mr),
+            SHARD_ID,
+            mergeSchedulerSettings(),
+            mockThreadPool()
+        );
+
+        scheduler.triggerMerges();
+        assertTrue(latch.await(5, TimeUnit.SECONDS));
+        Thread.sleep(200);
+        assertNotNull(captured.get());
+    }
+
+    public void testTriggerMergesHandlesMergeFailure() throws Exception {
+        List<Segment> segments = createSegments(15);
+        CountDownLatch latch = new CountDownLatch(1);
+
+        Merger failingMerger = mergeInput -> {
+            latch.countDown();
+            throw new IOException("merge boom");
+        };
+        MergeHandler handler = createHandlerWithRealPolicy(snapshotSupplierOf(segments), failingMerger);
+
+        MergeScheduler scheduler = new MergeScheduler(handler, (mr, om) -> {}, SHARD_ID, mergeSchedulerSettings(), mockThreadPool());
+
+        scheduler.triggerMerges();
+        assertTrue(latch.await(5, TimeUnit.SECONDS));
+        Thread.sleep(200);
+    }
+
+    public void testForceMergeExecutesMerges() throws Exception {
+        List<Segment> segments = createSegments(3);
+        MergeResult mergeResult = new MergeResult(Map.of());
+        CountDownLatch latch = new CountDownLatch(1);
+
+        Merger merger = mergeInput -> mergeResult;
+        MergeHandler handler = createHandlerWithRealPolicy(snapshotSupplierOf(segments), merger);
+
+        AtomicReference<MergeResult> captured = new AtomicReference<>();
+        MergeScheduler scheduler = new MergeScheduler(handler, (mr, om) -> {
+            captured.set(mr);
+            latch.countDown();
+        }, SHARD_ID, mergeSchedulerSettings(), mockThreadPool());
+
+        scheduler.forceMerge(1);
+        assertTrue(latch.await(5, TimeUnit.SECONDS));
+        assertNotNull(captured.get());
+    }
+
+    @SuppressForbidden(reason = "helper to set private isShutdown field via reflection for testing")
+    private static void setShutdownFlag(MergeScheduler scheduler, boolean value) {
+        try {
+            Field f = MergeScheduler.class.getDeclaredField("isShutdown");
+            f.setAccessible(true);
+            ((AtomicBoolean) f.get(scheduler)).set(value);
+        } catch (Exception e) {
+            throw new RuntimeException(e);
+        }
     }
 }
